@@ -9,9 +9,9 @@ fix-makefile-substitution-bug.patch
 webapprt-support-for-langpacks.patch
 no_neon_on_arm.patch
 python-virtualenv-multiarch-fix.patch
-mochitest-optional-websock-log.patch
-mochitest-allow-test-manifest-for-chrome.patch
-xpcshell-allow-omit-tests-on-real-install.patch
+test-integration/mochitest-optional-websock-log.patch
+test-integration/mochitest-allow-test-manifest-for-chrome.patch
+test-integration/xpcshell-allow-omit-tests-on-real-install.patch
 test-fixes/xpcshell-search-fix-browser-dirprovider.patch
 test-fixes/xpcshell-docshell-no-writes-to-appdir.patch
 test-fixes/xpcshell-contentprefs-no-writes-to-appdir.patch
