@@ -92,6 +92,7 @@ firefox-trunk (21.0~a1~hg20130113r118722-0ubuntu1) UNRELEASED; urgency=low
     - update debian/firefox.install.in
   * Update python-virtualenv-multiarch-fix.patch with the upstream fix from
     Barry Warsaw
+  * Move some test integration patches in to a new directory
 
  -- Chris Coulson <chris.coulson@canonical.com>  Tue, 08 Jan 2013 00:43:23 +0000
 
